--- a/ParcialFinalJoseTurcios/PrototipoEFP12024/PrototipoEFP12024.cbp
+++ b/ParcialFinalJoseTurcios/PrototipoEFP12024/PrototipoEFP12024.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Parcialfinaljoseturcios9959-22-4451" />
+		<Option title="PrototipoEFP12024" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Parcialfinaljoseturcios9959-22-4451" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/PrototipoEFP12024" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -17,7 +17,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Parcialfinaljoseturcios9959-22-4451" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/PrototipoEFP12024" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -36,11 +36,11 @@
 		</Compiler>
 		<Unit filename="include/Bitacora.h" />
 		<Unit filename="include/Menus.h" />
-		<Unit filename="include/UsuarioPlanilla.h" />
+		<Unit filename="include/Usuario.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Bitacora.cpp" />
 		<Unit filename="src/Menus.cpp" />
-		<Unit filename="src/UsuarioPlanilla.cpp" />
+		<Unit filename="src/Usuario.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
